src/ProfilePage/ProfilePage.css
.profilePage-sect {
  display: flex;
  justify-content: center;
  padding: 100px 0 50px 0;
  text-align: center;
}

.image-art {
  text-align: center;
  color: black;
  width: 370px;
  margin: 10px 15px 10px 15px;
  padding-bottom: 5px;
  background-color: rgb(223, 114, 41);
  border-radius: 2%;
  overflow: hidden;
  box-shadow: 0 4px 2px 3px rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
}

.image-art > .individ-wrapper {
  margin: 0;
  padding: 0;
  box-shadow: 0 0 0;
}

.profile-pic {
  min-height: 150px;
  min-width: 200px;
  border-width: 1px;
  border-style: solid;
  border-color: rgb(0, 0, 0);
  border-image: initial;
}

.prof-user-name {
  font-size: 3rem;
}

.images-sect {
  justify-content: space-evenly;
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  width: 100%;
}

.viewbar-sect {
  background-color: rgb(36, 35, 35);
  display: flex;
  justify-content: center;

  color: aliceblue;
}

.tab-wrapper {
  text-align: center;
  margin: 0px;
}

.tab-wrapper > h2 {
  margin: 0 20px 0 0;
}

